<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.friendcycle.bmicalculator.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_3"
        android:gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/textHeadlineString"
                android:textAlignment="center"
                android:textColor="@color/colorTextPrimary"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                android:minWidth="250dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/textBMIResultField"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textResultValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:hint="@string/textHintResultValue"
                    android:text="@string/textResultBMI"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextMass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:hint="@string/textHintMassField"
                android:inputType="numberDecimal"
                android:minWidth="250dp"
                android:textAlignment="center"
                android:textColor="@color/colorTextPrimary"
                android:textColorLink="@android:color/holo_blue_dark" />

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/textHintHeightField"
                android:inputType="numberDecimal"
                android:minWidth="250dp"
                android:textAlignment="center"
                android:textColor="@color/colorTextPrimary"
                android:textColorLink="@android:color/holo_blue_dark" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@color/colorButtonPrimary"
            android:minWidth="125dp"
            android:text="@string/textButton"
            android:textColor="@color/colorButtonTextPrimary"
            android:textSize="18sp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
